tests/base/invalid/While_CompileFail_1.whiley
import * from whiley.lang.*

void ::main(System sys,[string] args):
    j=0
    while(j < |args|):
        i = 1
        j = j + 1
    debug Any.toString(i)
